# pyobs-weather

./: .dockerignore  .env.example  .gitlab-ci.yml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
docs/source/: conf.py
docs/source/stations/: index.rst
pyobs_weather/: celery.py  settings.py  urls.py  wsgi.py
pyobs_weather/api/: urls.py  views.py
pyobs_weather/frontend/: urls.py  views.py
pyobs_weather/frontend/static/: app.js  styles.css
pyobs_weather/frontend/static/frontend/css/: styles.css
pyobs_weather/frontend/static/frontend/js/: app-sensors.js  app.js
pyobs_weather/frontend/templates/: base.html  documentation.html  index.html  sensors.html
pyobs_weather/frontend/templatetags/: version.py
pyobs_weather/main/: __init__.py  admin.py  apps.py  models.py  tasks.py
pyobs_weather/main/evaluators/: __init__.py  boolean.py  schmitt.py  valid.py
pyobs_weather/main/fixtures/: initials.json  sensor_types.json
pyobs_weather/main/stations/: average.py  current.py  mcdlocke.py
pyobs_weather/mcd_locke/: apps.py  tasks.py
pyobs_weather/mcdonald_locke/: __init__.py  tasks.py
pyobs_weather/plot/templates/plot/: sensor_type.html
pyobs_weather/plot/templatetags/: plot_sensor_type_tags.py  plot_tags.py
pyobs_weather/weather/: admin.py  apps.py  dbfunctions.py  influx.py  models.py  tasks.py  utils.py
pyobs_weather/weather/evaluators/: __init__.py  boolean.py  schmitt.py  switch.py  valid.py
pyobs_weather/weather/fixtures/: initials.json
pyobs_weather/weather/management/commands/: dump_good.py  dump_weather.py  evaluate.py  initweather.py  test_average.py  test_current.py  test_mcdlocke.py  test_monet.py  test_mysql.py  test_observer.py  update_station.py
pyobs_weather/weather/migrations/: 0001_initial.py  0002_auto_20201119_0942.py  0002_sensor_average.py  0002_sensortype_average.py  0003_auto_20190826_1302.py  0003_goodweather.py  0004_alter_evaluator_id_alter_goodweather_id_and_more.py  0004_station_plot.py  0005_alter_evaluator_name.py  0005_station_color.py  0006_alter_evaluator_name_alter_station_code.py  0006_auto_20190826_1526.py  0007_remove_value_good.py  0007_sensor_active_alter_sensor_average.py  0008_alter_sensor_unique_together_and_more.py  0008_station_kwargs.py
pyobs_weather/weather/stations/: __init__.py  average.py  csv.py  current.py  dummy.py  json.py  lco.py  mcdlocke.py  mcdlockearchive.py  mcdtelnet.py  mcdvt100.py  monet.py  mysql.py  observer.py  readonly.py  station.py
static/: app-sensors.js  app.js  styles.css
