[tool.poetry]
name = "pyobs-weather"
packages = [{ include = "pyobs_weather" }]
version = "1.1.3"
description = "robotic telescope software"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
astroplan = "^0.8"
astropy = "^5.0"
celery = "^5.2.3"
Django = "3.2.18"
django-celery-beat = "^2.2.1"
gunicorn = "^20.1.0"
numpy = "^1.22.1"
pandas = "^1.3.5"
psycopg2-binary = "^2.9.3"
redis = "^4.1.1"
requests = {extras = ["socks"], version = "^2.27.1"}
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
