[tool.poetry]
name = "pyobs-weather"
packages = [{ include = "pyobs_weather" }]
version = "1.2.0"
description = "robotic telescope software"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
astroplan = "^0.10.1"
astropy = "^6.1.2"
celery = "^5.2.3"
Django = "3.2.11"
django-celery-beat = "^2.2.1"
gunicorn = "^20.1.0"
numpy = "^2.0.1"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.3"
redis = "^4.1.1"
requests = {extras = ["socks"], version = "^2.27.1"}
influxdb-client = "^1.45.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
