[project]
name = "pyobs-weather"
version = "1.3.0"
description = "robotic telescope software"
authors = [{name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de"}]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "astroplan>=0.10.1,<0.11",
    "astropy>=7",
    "celery>=5.2.3,<6",
    "Django>=5.2,<6",
    "django-celery-beat>=2.2.1,<3",
    "gunicorn>=21",
    "numpy>=2.0.1,<3",
    "pandas>=2.2.2,<3",
    "psycopg2-binary>=2.9.3,<3",
    "requests[socks]>=2.27.1,<3",
    "influxdb-client>=1.45.0,<2",
]

[dependency-groups]
dev = [
    "black>=21.12b0,<22",
    "Sphinx>=4.4.0,<5",
    "sphinx-rtd-theme>=1.0.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyobs_weather"]

[tool.black]
line-length = 120
target-version = ['py311']
